testsuite/tests/parser/should_fail/typeops_C.stderr

typeops_C.hs:1:14: error: [GHC-24180]
    Operator applied to too few arguments: +
